message Get {
  required uint32 id = 1;
  required bytes key = 2;
}

message Put {
  required uint32 id = 1;
  required bytes key = 2;
  optional bytes value = 3;
}

message Delete {
  required uint32 id = 1;
  required bytes key = 2;
}

message Batch {
  required uint32 id = 1;
  repeated Operation ops = 2;

  message Operation {
    required string type = 1;
    required bytes key = 2;
    optional bytes value = 3;
  }
}

message Clear {
  required uint32 id = 1;
  optional ClearOptions options = 2;

  message ClearOptions {
    optional bytes gt = 3;
    optional bytes gte = 4;
    optional bytes lt = 5;
    optional bytes lte = 6;
    optional sint32 limit = 7;
    optional bool reverse = 8;
  }
}

message Iterator {
  required uint32 id = 1;
  required uint32 batch = 2;
  optional Options options = 3;

  message Options {
    optional bool keys = 1;
    optional bool values = 2;
    optional bytes gt = 3;
    optional bytes gte = 4;
    optional bytes lt = 5;
    optional bytes lte = 6;
    optional sint32 limit = 7;
    optional bool reverse = 8;
  }
}

message Callback {
  required uint32 id = 1;
  optional string error = 2;
  optional bytes value = 3;
}

message IteratorData {
  required uint32 id = 1;
  optional string error = 2;
  optional bytes key = 3;
  optional bytes value = 4;
}

message IteratorClose {
  required uint32 id = 1;
}

message GetMany {
  required uint32 id = 1;
  repeated bytes keys = 2;
}

message GetManyCallback {
  required uint32 id = 1;
  optional string error = 2;
  repeated Value values = 3;

  // Wrapped to support undefined values
  message Value {
    optional bytes value = 1;
  }
}
